--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,7 @@
     
 }
 
+
 body{
     
     font-family: "Arial", serif;
@@ -47,6 +48,7 @@ body{
     text-decoration: none;
     padding: 14px 16px;
     float: left;
+    font-weight: bold;
 
 }
 main{
@@ -54,11 +56,11 @@ main{
 
     width: 1000px;
     background-color: #FFEAD0;
-    height: 100%;
+    /*height: 100%;*/
 
 }
 .content{
     
-    margin: 10px;
-    
+    margin: 15px;
+    overflow: auto;
 }
