--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,10 @@
-<h1>Placeholder Welcome Text!</h1>
+
+<%= image_tag( "about_splash.png", :class => "about_splash" )%>
+
+<h1>What is EDU CONNECT?</h1>
+
+<div class="description">
+    EDU CONNECT is an online resource intended to help you find information regarding schools in your area. 
+    Here you will find a database of schools categorized by the counties they are located in. 
+    To begin, click a link on the navbar located at the top of the page. 
+    </div>
