--- a/app/views/counties/show.html.erb
+++ b/app/views/counties/show.html.erb
@@ -1,5 +1,4 @@
 <p>
-    <Strong><%=@county.name%></Strong>
-    
+    <Strong><%=@county.name%></Strong></p>
+    <br>
     Here should be the list of names of schools for <%=@county.name%>.
-</p>
