--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <div class="navbuttons">
 
           <%= link_to 'Home', root_path %>
+          <%= link_to 'Counties', counties_path %>
           <%= link_to 'New County', new_county_path %>
 
         </div>
