--- a/app/views/counties/new.html.erb
+++ b/app/views/counties/new.html.erb
@@ -1,6 +1,22 @@
 <h1>New County</h1>
 <%= form_for :county, url: counties_path do |f| %>
- 
+
+  <% if @county.errors.any? %>
+  
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@county.errors.count, "error") %> prohibited
+        this county from being saved:
+      </h2>
+      <ul>
+        <% @county.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+    
+  <% end %>
+  
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -12,3 +28,5 @@
   </p>
  
 <% end %>
+
+<%= link_to 'Back', counties_path %>
