--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -8,6 +8,7 @@
     <tr>
         <td> <%= county.name %></td>
         <td> <%= link_to 'Schools', county_path(county) %></td>
+        <td><%= link_to 'Edit Name', edit_county_path(county) %></td>
     </tr>
     <%end%>
 </table>
