--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -8,7 +8,8 @@
     <tr>
         <td> <%= county.name %></td>
         <td> <%= link_to 'Schools', county_path(county) %></td>
-        <td><%= link_to 'Edit Name', edit_county_path(county) %></td>
+        <td> <%= link_to 'Edit Name', edit_county_path(county) %></td>
+        <td><%= link_to 'Delete', county_path(county), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
     <%end%>
 </table>
