--- a/app/views/counties/show.html.erb
+++ b/app/views/counties/show.html.erb
@@ -1,4 +1,16 @@
-<p>
-    <Strong><%=@county.name%></Strong></p>
-    <br>
-    Here should be the list of names of schools for <%=@county.name%>.
+<h1><%=@county.name%></h1>
+<table>
+    <tr>
+    <th>Schools</th>
+    <th></th>
+    </tr>
+    <% @county.schools.each do |school| %>
+    <tr>
+        <td> <%= school.name %></td>
+        <td> <%= link_to 'Information', county_school_path(@county, school) %></td>
+        
+    </tr>
+    <%end%>
+</table>
+<br>
+<%= link_to 'New School', new_county_school_path(@county) %><br>
