--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -1,1 +1,34 @@
-in construction
+<h1> Didn't find the school you were looking for?</h1>
+<h6>Add a school for <%=@county.name%></h6>
+<%= form_for ([@county, @county.schools.build]) do |f| %>
+
+  <p>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </p>
+ 
+  <p>
+    <%= f.label :address %><br>
+    <%= f.text_area :address %>
+  </p>
+  <p>
+    <%= f.label :grade %><br>
+    <%= f.text_field :grade %>
+  </p>
+  <p>
+    <%= f.label :phone %><br>
+    <%= f.text_field :phone %>
+  </p>
+  <p>
+    <%= f.label :website %><br>
+    <%= f.text_field :website %>
+  </p>
+ 
+  <p>
+    <%= f.submit %>
+  </p>
+ 
+<% end %>
+<br><br><br>
+ 
+Please register or login to post a comment
