--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,1 +1,28 @@
 <h1> <%=@school.name %></h1>
+
+<h2> Reviews</h2>
+<% @school.reviews.each do |review| %>
+<p>
+    <strong> <%=review.initials %></strong>
+    <%= review.created_at%>
+    
+</p>
+<%=review.comment%>
+
+<%end%>
+
+<%= form_for([@school,@school.reviews.build]) do |f| %>
+<p>
+    <%= f.label :initials %> <br>
+    <%= f.text_field :initials %>
+</p>
+<p>
+    <%= f.label :comment %><br>
+    <%= f.text_field :comment %>
+</p>
+<p>
+    <%= f.submit%>
+</p>
+<%end%>
+
+<%= link_to 'Back to Counties', county_path(@county) %>
