--- a/app/assets/stylesheets/counties.scss
+++ b/app/assets/stylesheets/counties.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Counties controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+tr:nth-child(even) {background: #FFD8AD}
+tr:nth-child(odd) {background: transparent}
+td{
+    padding: 0px;
+    margin: 0px;
+}
+
+tr{
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+}
+table{
+    border-collapse:separate;
+    border-spacing:0px 0px;
+    table-layout: fixed;
+}
+tr:nth-child(1){
+    background: transparent;
+}
