--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
     <title>SchoolSystem</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaYT5wYepNyq1XIwjOHDgnBAxXuycwL00&callback=initMap"
+  type="text/javascript"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
