--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -1,12 +1,26 @@
-<h1>Change School Name</h1>
+<h1>Change School Information</h1>
 <%= form_for @school, url: county_school_path(@county), method: :patch do |f| %>
 
-  
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </p>
- 
+  <p>
+    <%= f.label :address %><br>
+    <%= f.text_area :address %>
+  </p>
+  <p>
+    <%= f.label :grade %><br>
+    <%= f.text_field :grade %>
+  </p>
+  <p>
+    <%= f.label :phone %><br>
+    <%= f.text_field :phone %>
+  </p>
+  <p>
+    <%= f.label :website %><br>
+    <%= f.text_field :website %>
+  </p>
  
   <p>
     <%= f.submit %>
