--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of Counties</h1>
 <table>
     <tr>
-    <th>County name</th>
+    <th>County</th>
     <th></th>
     </tr>
     <% @counties.each do |county| %>
@@ -12,4 +12,6 @@
         <td><%= link_to 'Delete', county_path(county), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
     <%end%>
-</table>
+</table><br>
+<%= link_to 'New County', new_county_path %>
+
