--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
           <%= link_to 'Home', root_path %>
           <%= link_to 'Counties', counties_path %>
-          <%= link_to 'New County', new_county_path %>
+          <%= link_to 'Schools', schools_path %>
 
         </div>
 
