--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
         <div class="navbuttons">
 
           <%= link_to 'Home', root_path %>
-          <%= link_to 'Counties', counties_path %>
-          <%= link_to 'Schools', schools_path %>
+          <%= link_to 'All Counties', counties_path %>
+          <%= link_to 'All Schools', schools_path %>
 
         </div>
 
