--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,7 +79,7 @@ main{
 
 .content{
     
-    padding-left: 0; padding-right: 0;
+    padding-left:10px;
     padding-bottom: 20px;
     margin: 15px;
     padding-top: 5px;
@@ -99,6 +99,7 @@ input[type=button], input[type=submit] {
     padding: 10px 10px;
     text-decoration: none;
     cursor: pointer;
+    margin-bottom: 10px;
     
 }
 input[type=text] {
@@ -113,7 +114,7 @@ table {
 }
 td,th {
     
-    padding:10px;
+    padding:12px;
     border-bottom: 1px solid #ddd;
 }
 
@@ -144,4 +145,9 @@ table a:hover{
   color: #fff;
   text-align: center;
   background: #B9B5B4;
+}
+.error_explanation{
+    padding:10px;
+    background-color: #ff8080;
+    
 }
