--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -9,7 +9,7 @@
         <td> <%= school.name %></td>
         <td> <%= school.county.try(:name) %></td>
         <td> <%= link_to 'Information', school_path(school) %></td>
-        <td> <%= link_to 'Edit', edit_school_path(school) %></td>
+        <td> <%= link_to 'Edit', edit_school_path(school.county_id ,school) %></td>
         <td><%= link_to 'Delete', school_path(school), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
     <%end%>
