--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -1,6 +1,17 @@
 <h1> Didn't find the school you were looking for?</h1>
 <h6>Add a school for <%=@county.name%></h6>
 <%= form_for ([@county, @county.schools.build]) do |f| %>
+  <%if @school.errors.any?%>
+  <div class="error_explanation">
+  <h3>
+    <%= pluralize(@school.errors.count, "error") %> prohibited this school from being saved:
+  </h3>
+  <ul>
+    <%@school.errors.full_messages.each do |msg| %>
+    <li><%=msg%></li>
+    <%end%>
+  </ul></div>
+  <%end%>
 
   <p>
     <%= f.label :name %><br>
