--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,6 +6,6 @@
 <div class="description">
     EDU CONNECT is an online resource intended to help you find information regarding schools in your area. 
     Here you will find a database of schools categorized by the counties they are located in. 
-    Once finished users will begin by clicking a link on the navbar located at the top of the page. 
-    In its current iteration, this site only contains this intro text, and a single view for the County resource.
+    Users may also choose to share their opinions by leaving a review of a school on its page.
+    Click a link on the navbar to begin!
     </div>
