--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,4 +1,5 @@
 <h1>List of Schools</h1>
+<%= image_tag( "divide_plain.png", :class => "content_divide" )%>
 <table>
     <tr>
     <th>School</th>
@@ -15,3 +16,4 @@
     <%end%>
 </table>
 <br>
+<%= image_tag( "divide.png", :class => "content_divide" )%>
