--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,3 +151,12 @@ table a:hover{
     background-color: #ff8080;
     
 }
+
+.content_divide{
+    
+    margin: auto;
+    /*margin-top: 20px;*/
+    display: block;
+    /*width: 350px;*/
+
+}
