--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -1,4 +1,5 @@
 <h1>List of Counties</h1>
+<%= image_tag( "divide_plain.png", :class => "content_divide" )%>
 <table>
     <tr>
     <th>County</th>
@@ -15,3 +16,4 @@
 </table><br>
 <%= link_to 'New County', new_county_path %>
 
+<%= image_tag( "divide.png", :class => "content_divide" )%>
