--- a/app/views/counties/new.html.erb
+++ b/app/views/counties/new.html.erb
@@ -1,4 +1,5 @@
 <h1>New County</h1>
+<%= image_tag( "divide_plain.png", :class => "content_divide" )%>
 <%= form_for :county, url: counties_path do |f| %>
 
   <% if @county.errors.any? %>
@@ -30,3 +31,5 @@
 <% end %>
 
 <%= link_to "Back", :back %>
+
+<%= image_tag( "divide.png", :class => "content_divide" )%>
