--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Change School Information</h1>
+<%= image_tag( "divide_plain.png", :class => "content_divide" )%>
 <%= form_for @school, url: county_school_path(@county), method: :patch do |f| %>
 
   <p>
@@ -29,3 +30,4 @@
 <% end %>
 
 <%= link_to "Back", :back %>
+<%= image_tag( "divide.png", :class => "content_divide" )%>
