--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -1,5 +1,6 @@
-<h1> Didn't find the school you were looking for?</h1>
-<h6>Add a school for <%=@county.name%></h6>
+<h1> Add a School For <%=@county.name%></h1>
+<%= image_tag( "divide_plain.png", :class => "content_divide" )%>
+
 <%= form_for ([@county, @county.schools.build]) do |f| %>
   <%if @school.errors.any?%>
   <div class="error_explanation">
@@ -44,3 +45,5 @@
 <%= link_to "Back", :back %>
 
 <br><br><br>
+
+<%= image_tag( "divide.png", :class => "content_divide" )%>
