Added to link to school's website

--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -21,8 +21,8 @@
         <%=@school.grade %>
         
         <h2>Website</h2>
-        <%=@school.website %>
         
+        <%= link_to "Visit", @school.website %>
       
   </div>
   
